// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render tests should add snapshot chart data with fail examples 1`] = `
{
  "backgroundColor": [
    "#dc3545",
  ],
  "data": [
    2,
  ],
  "labels": [
    "Failed",
  ],
}
`;

exports[`Render tests should add snapshot chart data with no examples 1`] = `
{
  "backgroundColor": [
    "#007bff",
  ],
  "data": [
    "1",
  ],
  "labels": [
    "Added",
  ],
}
`;

exports[`Render tests should add snapshot chart data with pass examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#007bff",
  ],
  "data": [
    2,
    "1",
  ],
  "labels": [
    "Passed",
    "Added",
  ],
}
`;

exports[`Render tests should build chart data with fail examples 1`] = `
{
  "backgroundColor": [
    "#dc3545",
  ],
  "data": [
    1,
  ],
  "labels": [
    "Failed",
  ],
}
`;

exports[`Render tests should build chart data with no examples 1`] = `
{
  "backgroundColor": [],
  "data": [],
  "labels": [],
}
`;

exports[`Render tests should build chart data with pass and fail examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#dc3545",
  ],
  "data": [
    1,
    2,
  ],
  "labels": [
    "Passed",
    "Failed",
  ],
}
`;

exports[`Render tests should build chart data with pass examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
  ],
  "data": [
    1,
  ],
  "labels": [
    "Passed",
  ],
}
`;

exports[`Render tests should build chart data with passing, pending, and failing examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#dc3545",
    "#ffc107",
  ],
  "data": [
    1,
    2,
    1,
  ],
  "labels": [
    "Passed",
    "Failed",
    "Pending",
  ],
}
`;

exports[`Render tests should build chart data with pending and fail examples only 1`] = `
{
  "backgroundColor": [
    "#dc3545",
    "#ffc107",
  ],
  "data": [
    1,
    1,
  ],
  "labels": [
    "Failed",
    "Pending",
  ],
}
`;

exports[`Render tests should build chart data with todo and passing examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#17a2b8",
  ],
  "data": [
    1,
    1,
  ],
  "labels": [
    "Passed",
    "Todo",
  ],
}
`;

exports[`Render tests should build chart data with todo examples only 1`] = `
{
  "backgroundColor": [
    "#17a2b8",
  ],
  "data": [
    1,
  ],
  "labels": [
    "Todo",
  ],
}
`;

exports[`Render tests should build chart data with todo, passing, and failing examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#dc3545",
    "#17a2b8",
  ],
  "data": [
    1,
    1,
    1,
  ],
  "labels": [
    "Passed",
    "Failed",
    "Todo",
  ],
}
`;

exports[`Render tests should build chart data with todo, passing, failing, and pending examples 1`] = `
{
  "backgroundColor": [
    "#28a745",
    "#dc3545",
    "#ffc107",
    "#17a2b8",
  ],
  "data": [
    1,
    1,
    1,
    1,
  ],
  "labels": [
    "Passed",
    "Failed",
    "Pending",
    "Todo",
  ],
}
`;

exports[`Render tests should create link to coverage report if in config 1`] = `"/some/place/index.html"`;

exports[`Render tests should not create link to coverage report if not in config 1`] = `"#"`;

exports[`Render tests should show changed snapshot chart data with changed snapshots  1`] = `
{
  "backgroundColor": [
    "#6c757d",
  ],
  "data": [
    1,
  ],
  "labels": [
    "Changed",
  ],
}
`;

exports[`Render tests should show snapshot chart data with obsolete snapshots  1`] = `
{
  "backgroundColor": [
    "#ffc107",
  ],
  "data": [
    1,
  ],
  "labels": [
    "Obsolete Test",
  ],
}
`;
